done for the day

--- a/4.1
+++ b/4.1
@@ -5,3 +5,4 @@ Latin Test Things
 - recognize different clauses
 - translate some sentences
 - label some clauses
+- participles (recognize, deal with, treat them as clauses (attributive/predicate))
